fix contact page overflow

--- a/css/index.css
+++ b/css/index.css
@@ -616,14 +616,14 @@ nav div a:hover {
   }
 }
 .contact {
-  height: 45vh;
+  max-height: 45vh;
   background-color: #ffac41;
   color: black;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 5rem;
+  padding-top: 4rem;
 }
 @media (max-width: 763px) {
   .contact {
@@ -638,10 +638,16 @@ nav div a:hover {
   color: black;
 }
 .contact .social-icons {
-  padding: 4rem;
-  min-width: 40rem;
+  padding: 3rem;
+  width: 40rem;
   display: flex;
   justify-content: space-between;
+}
+@media (max-width: 500px) {
+  .contact .social-icons {
+    padding: 1rem 2rem;
+    width: 100vw;
+  }
 }
 .contact .social-icons img:hover {
   transform: scale(1.2);
